Add areas delete
