# packages/api/src/routes/areas/index.ts
@@ -1,10 +1,12 @@
 import express from "express";
 import { createArea } from "./create";
+import { deleteArea } from "./delete";
 import { listAreas } from "./list";
 
 const areasRouter = express.Router();
 
-areasRouter.get("/", listAreas);
+areasRouter.delete("/:id", deleteArea);
 areasRouter.post("/", createArea);
+areasRouter.get("/", listAreas);
 
 export { areasRouter };
